--- a/Actions/BuildALDoc/action.yaml
+++ b/Actions/BuildALDoc/action.yaml
@@ -9,6 +9,9 @@ inputs:
     description: The GitHub token running the action
     required: false
     default: ${{ github.token }}
+  artifacts:
+    description: Artifacts to build documentation for
+    required: true
 runs:
   using: composite
   steps:
@@ -17,10 +20,11 @@ runs:
       id: BuildALDoc
       env:
         _token: ${{ inputs.token }}
+        _artifacts: ${{ inputs.artifacts }}
       run: |
         $errorActionPreference = "Stop"; $ProgressPreference = "SilentlyContinue"; Set-StrictMode -Version 2.0
         try {
-          ${{ github.action_path }}/BuildALDoc.ps1 -token $ENV:_token
+          ${{ github.action_path }}/BuildALDoc.ps1 -token $ENV:_token -artifacts $ENV:_artifacts
         }
         catch {
           Write-Host "::ERROR::Unexpected error when running action. Error Message: $($_.Exception.Message.Replace("`r",'').Replace("`n",' ')), StackTrace: $($_.ScriptStackTrace.Replace("`r",'').Replace("`n",' <- '))";
