--- a/Templates/AppSource App/.github/workflows/DeployReferenceDocumentation.yaml
+++ b/Templates/AppSource App/.github/workflows/DeployReferenceDocumentation.yaml
@@ -1,4 +1,4 @@
-name: ' Publish ALDoc Documentation'
+name: ' Deploy Reference Documentation'
 
 on:
   workflow_dispatch:
@@ -20,7 +20,7 @@ env:
 jobs:
   DeployALDoc:
     runs-on: [ windows-latest ]
-    name: Deploy ALDoc Documentation
+    name: Deploy Reference Documentation
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
@@ -54,7 +54,7 @@ jobs:
         if: steps.DetermineDeploymentEnvironments.outputs.deployALDocArtifact == 1
         uses: actions/configure-pages@v3
         
-      - name: Build ALDoc Documentation
+      - name: Build Reference Documentation
         uses: microsoft/AL-Go-Actions/BuildALDoc@main
         with:
           shell: powershell
