--- a/Templates/Per Tenant Extension/.github/workflows/CICD.yaml
+++ b/Templates/Per Tenant Extension/.github/workflows/CICD.yaml
@@ -157,7 +157,7 @@ jobs:
     needs: [ Initialization, Build ]
     if: always() && needs.Build.result == 'Success' && needs.Initialization.outputs.generateALDocArtifact == 1
     runs-on: windows-latest
-    name: Deploy ALDoc Documentation
+    name: Deploy Reference Documentation
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
@@ -179,7 +179,7 @@ jobs:
         if: needs.Initialization.outputs.deployALDocArtifact == 1
         uses: actions/configure-pages@v3
 
-      - name: Build ALDoc Documentation
+      - name: Build Reference Documentation
         uses: microsoft/AL-Go-Actions/BuildALDoc@main
         with:
           shell: powershell
