--- a/Templates/AppSource App/.github/workflows/_BuildALGoProject.yaml
+++ b/Templates/AppSource App/.github/workflows/_BuildALGoProject.yaml
@@ -91,7 +91,7 @@ jobs:
           with:
             shell: ${{ inputs.shell }}
             project: ${{ inputs.project }}
-            get: useCompilerFolder,keyVaultCodesignCertificateName,doNotSignApps,doNotRunTests,artifact
+            get: useCompilerFolder,keyVaultCodesignCertificateName,doNotSignApps,doNotRunTests,artifact,generateDependencyArtifact
 
         - name: Read secrets
           id: ReadSecrets
@@ -172,6 +172,15 @@ jobs:
             if-no-files-found: ignore
             retention-days: 1
 
+        - name: Upload thisbuild artifacts - dependencies
+          if: inputs.publishThisBuildArtifacts
+          uses: actions/upload-artifact@v3
+          with:
+            name: ${{ steps.calculateArtifactsNames.outputs.ThisBuildDependenciesArtifactsName }}
+            path: '${{ inputs.project }}/.buildartifacts/Dependencies/'
+            if-no-files-found: ignore
+            retention-days: 1
+
         - name: Upload thisbuild artifacts - test apps
           if: inputs.publishThisBuildArtifacts
           uses: actions/upload-artifact@v3
@@ -191,7 +200,7 @@ jobs:
 
         - name: Publish artifacts - dependencies
           uses: actions/upload-artifact@v3
-          if: inputs.publishArtifacts
+          if: inputs.publishArtifacts && env.generateDependencyArtifact == 'True'
           with:
             name: ${{ steps.calculateArtifactsNames.outputs.DependenciesArtifactsName }}
             path: '${{ inputs.project }}/.buildartifacts/Dependencies/'
