--- a/Templates/AppSource App/.github/workflows/UpdateGitHubGoSystemFiles.yaml
+++ b/Templates/AppSource App/.github/workflows/UpdateGitHubGoSystemFiles.yaml
@@ -95,7 +95,7 @@ jobs:
         with:
           shell: powershell
           token: ${{ fromJson(steps.ReadSecrets.outputs.Secrets).ghTokenWorkflow }}
-          DownloadLatest: ${{ env.downloadLatest }}
+          downloadLatest: ${{ env.downloadLatest }}
           update: true
           templateUrl: ${{ env.templateUrl }}
           directCommit: ${{ env.directCommit }}
