--- a/Templates/Per Tenant Extension/.github/workflows/UpdateGitHubGoSystemFiles.yaml
+++ b/Templates/Per Tenant Extension/.github/workflows/UpdateGitHubGoSystemFiles.yaml
@@ -83,7 +83,7 @@ jobs:
           $downloadLatest = $ENV:downloadLatest
           Write-Host $ENV:eventName
           if ($ENV:eventName -eq 'schedule') {
-            Write-Host "Running Update AL-Go System Files on a schedule. Setting DirectCommit amd DownloadLatest to true"
+            Write-Host "Running Update AL-Go System Files on a schedule. Setting DirectCommit and DownloadLatest to true"
             $directCommit = 'true'
             $downloadLatest = 'true'
           }
@@ -95,8 +95,8 @@ jobs:
         with:
           shell: powershell
           token: ${{ fromJson(steps.ReadSecrets.outputs.Secrets).ghTokenWorkflow }}
-          DownloadLatest: ${{ env.downloadLatest }}
-          Update: true
+          downloadLatest: ${{ env.downloadLatest }}
+          update: true
           templateUrl: ${{ env.templateUrl }}
           directCommit: ${{ env.directCommit }}
 
