--- a/Actions/CreateApp/action.yaml
+++ b/Actions/CreateApp/action.yaml
@@ -1,5 +1,5 @@
-name: PowerShell script
-author: Freddy Kristiansen
+name: Create App
+author: Microsoft Corporation
 permissions:
   contents: write
   pull-requests: write
