--- a/Actions/BuildReferenceDocumentation/action.yaml
+++ b/Actions/BuildReferenceDocumentation/action.yaml
@@ -17,14 +17,14 @@ runs:
   steps:
     - name: run
       shell: ${{ inputs.shell }}
-      id: BuildALDoc
+      id: BuildReferenceDocumentation
       env:
         _token: ${{ inputs.token }}
         _artifacts: ${{ inputs.artifacts }}
       run: |
         $errorActionPreference = "Stop"; $ProgressPreference = "SilentlyContinue"; Set-StrictMode -Version 2.0
         try {
-          ${{ github.action_path }}/BuildALDoc.ps1 -token $ENV:_token -artifacts $ENV:_artifacts
+          ${{ github.action_path }}/BuildReferenceDocumentation.ps1 -token $ENV:_token -artifacts $ENV:_artifacts
         }
         catch {
           Write-Host "::ERROR::Unexpected error when running action. Error Message: $($_.Exception.Message.Replace("`r",'').Replace("`n",' ')), StackTrace: $($_.ScriptStackTrace.Replace("`r",'').Replace("`n",' <- '))";
