--- a/Templates/AppSource App/.github/workflows/DeployReferenceDocumentation.yaml
+++ b/Templates/AppSource App/.github/workflows/DeployReferenceDocumentation.yaml
@@ -47,7 +47,7 @@ jobs:
           GITHUB_TOKEN: ${{ github.token }}
         with:
           shell: powershell
-          getEnvironments: '-'
+          getEnvironments: 'github-pages'
           type: 'Publish'
             
       - name: Setup Pages
