--- a/Actions/DetermineProjectsToBuild/action.yaml
+++ b/Actions/DetermineProjectsToBuild/action.yaml
@@ -23,9 +23,9 @@ outputs:
   BuildOrderJson:
     description: An array of objects that determine that build order, including build dimensions
     value: ${{ steps.determineProjectsToBuild.outputs.BuildOrderJson }}
-  IsFullBuild:
-    description: A boolean value that indicates whether the build is a full build or not
-    value: ${{ steps.determineProjectsToBuild.outputs.IsFullBuild }}
+  IsPartialBuild:
+    description: A boolean value that indicates whether the build is a incremental or full build.
+    value: ${{ steps.determineProjectsToBuild.outputs.IsPartialBuild }}
 runs:
   using: composite
   steps:
