--- a/Actions/Deliver/action.yaml
+++ b/Actions/Deliver/action.yaml
@@ -1,5 +1,5 @@
-name: PowerShell script
-author: Freddy Kristiansen
+name: Deliver
+author: Microsoft Corporation
 inputs:
   shell:
     description: Shell in which you want to run the action (powershell or pwsh)
@@ -25,7 +25,7 @@ inputs:
     description: Delivery target (AppSource or Storage)
     required: true
   artifacts:
-    description: Artifacts to deliver
+    description: The artifacts to deliver or a folder in which the artifacts have been downloaded
     required: true
   type:
     description: Type of delivery (CD or Release)
