--- a/Templates/AppSource App/.github/workflows/TroubleShooting.yaml
+++ b/Templates/AppSource App/.github/workflows/TroubleShooting.yaml
@@ -20,15 +20,10 @@ jobs:
     needs: [ ]
     runs-on: [ windows-latest ]
     steps:
-      - name: Dump Workflow Information
-        uses: microsoft/AL-Go-Actions/DumpWorkflowInfo@main
-        with:
-          shell: powershell
-
       - name: Checkout
         uses: actions/checkout@v3
 
-      - name: Initialize the workflow
+      - name: Troubleshooting
         id: init
         uses: microsoft/AL-Go-Actions/TroubleShooting@main
         with:
